--- a/templates/document.ejs
+++ b/templates/document.ejs
@@ -21,6 +21,15 @@
 <%- content %>
   </div>
 </div>
-  
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149857775-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149857775-1');
+</script>
+
 </body>
 </html>
